# CrystalMath

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  CONTEXT.md  Cargo.toml  DELIVERY_SUMMARY.md  ENV_DETECTION_IMPLEMENTATION.md  ENV_FIX_DOCUMENTATION.md  IMPLEMENTATION_CHECKLIST.md  MONOREPO_MIGRATION_COMPLETE.md  N1_OPTIMIZATION_COMPLETE.md  PARALLEL_AGENT_WORK_SUMMARY.md  PHASE2_PLANNING_SUMMARY.md  PROGRESS.json  README.md  VERIFICATION.md  build.rs  clear_cfg_warnings.sh  compile_fix.sh  crystalmath_context_dump.txt  deduplicate_toml.sh  deploy_visualization_engine.sh  execute_architectural_cutover.sh  final_architecture_fix.sh  final_green_build.sh  final_monorepo_unify.sh  fix_ast_grep_cmd.sh  fix_async_ipc.sh  fix_bridge_imports.sh  fix_client_slice.sh  fix_ipc_framing.sh  fix_linker_issue.sh  fix_main_scope.sh  fix_manifest.sh  gather_context.sh  implement_features.sh  mega_compile_fix.sh  modernize_cluster_engine.sh  (+10 more)
python/: pyproject.toml
python/crystalmath/: __init__.py  api.py  cli.py  models.py  protocols.py  rust_bridge.py
python/crystalmath/_vendor/: __init__.py
python/crystalmath/ai/: __init__.py  service.py
python/crystalmath/aiida_plugin/: __init__.py
python/crystalmath/backends/: __init__.py  aiida.py  demo.py  sqlite.py
python/crystalmath/decks/: __init__.py
python/crystalmath/high_level/: __init__.py  api.py  builder.py  clusters.py  progress.py  registry.py  results.py  runners.py
python/crystalmath/integrations/: __init__.py  aiida_enhanced.py  atomate2_bridge.py  capabilities.py  jobflow_store.py  materials_project.py  pwd_bridge.py  pymatgen_bridge.py  slurm_runner.py  vaspkit.py
python/crystalmath/quacc/: __init__.py  config.py  covalent_runner.py  discovery.py  engines.py  mock_runner.py  parsl_runner.py  potcar.py  runner.py  store.py
python/crystalmath/server/: __init__.py  _handlers.py  framing.py  handlers.py  registry.py
python/crystalmath/templates/: __init__.py
python/crystalmath/vasp/: __init__.py  generator.py  incar.py  kpoints.py
python/crystalmath/workflows/: __init__.py  aiida_launcher.py  bands.py  convergence.py  eos.py  phonon.py
python/tests/: __init__.py  test_ai_service.py  test_api.py  test_atomate2_bridge.py  test_cluster_config.py  test_db_path_resolution.py  test_decks.py  test_handlers_quacc.py  test_high_level_api.py  test_job_runner.py  test_job_submission.py  test_jobflow_store_security.py  test_jsonrpc_dispatch.py  test_models.py  test_mvp_vertical_slice.py  test_pymatgen_bridge.py  test_quacc.py  test_slurm_runner.py  test_vasp_generator.py  test_workflows.py
tui/: .env.example  DEPENDENCY_CLEANUP.md  DEPENDENCY_REMOVAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  NEW_JOB_IMPLEMENTATION.md  RACE_CONDITION_FIX_SUMMARY.md  README.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_FIX_COMPLETE.txt  SECURITY_FIX_DETAILS.md  SECURITY_FIX_SLURM_INJECTION.md  SECURITY_FIX_SUMMARY.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_QUICK_REFERENCE.md  convergence_scan.dot  convergence_scan.json  docker-compose.yml  opt_freq_simple.json  pyproject.toml  security_test_save.yml  test_new_job_modal.py  valid.yml  validate_race_condition_fix.py
tui/config/clusters/: beefcake.yaml
tui/docs/: AIIDA_EPIC_COMPLETION.md  AIIDA_INTEGRATION_DESIGN.md  AIIDA_SETUP.md  AIIDA_TESTING.md  ALL_ISSUES_RESOLVED_SUMMARY.md  ARCHITECTURE_REALIGNMENT.md  AUTOFORM_IMPLEMENTATION.md  AUTO_FORM.md  BASERUNNER_INTERFACE.md  BATCH_SUBMISSION_SUMMARY.md  CRITICAL_RELIABILITY_FIXES_COMPLETE.md  DATABASE_MIGRATION.md  DATABASE_MIGRATION_ATOMICITY_FIX.md  DEPENDENCY_CLEANUP_COMPLETED.md  DEPENDENCY_VALIDATION_CONSOLIDATION.md  ENVIRONMENT_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INPUT_PREVIEW.md  INSTALL.md  ISSUE_r7z_RESOLUTION.md  MATERIALS_API.md  MIGRATION_FIX_SUMMARY.md  NEW_JOB_MODAL.md  OBSERVABILITY_IMPROVEMENTS.md  PHASE2_ROADMAP.md  PYTEST_ASYNCIO_FIX.md  QE_VASP_SUPPORT.md  QUEUE_MANAGER_N_PLUS_ONE_FIX.md  QUEUE_MANAGER_RACE_CONDITIONS_FIX.md  QUICK_REFERENCE.md  RESULTS_SUMMARY.md  SECURITY_FIXES_SSH_RUNNER.md  SECURITY_FIX_JINJA2_SANDBOX.md  SECURITY_FIX_SUMMARY.md  SQLITE_CONCURRENCY_CONFIG.md  SQLITE_CONNECTION_POOLING_IMPLEMENTATION.md  SSH_RUNNER_FIXES.md  SSH_STATUS_DETECTION_FIX.md  SSH_STATUS_FIX_SUMMARY.md  TEMPLATE_BROWSER.md  (+6 more)
tui/docs/examples/: input_preview_example.md
tui/examples/forms/: README.md  complex_form.json  conditional_form.json  simple_form.json  test_auto_form.py
tui/examples/workflows/: README.md  conditional_branch.py  convergence_scan.py  equation_of_state.py  opt_freq_simple.py
tui/scripts/: docker_setup_aiida.sh  postgres_init.sql  rabbitmq.conf  setup_aiida_infrastructure.sh  teardown_aiida_infrastructure.sh
tui/src/: __init__.py  main.py
tui/src/aiida/: __init__.py  migration.py  query_adapter.py  submitter.py
tui/src/core/: __init__.py  backend.py  config_loader.py  connection_manager.py  constants.py  core_adapter.py  database.py  dependency_utils.py  environment.py  orchestrator.py  queue_manager.py  templates.py  workflow.py
tui/src/postprocessing/: __init__.py  bands.py  (+4 more)
tui/tests/: conftest.py  security_verification.py  test_aiida_bands_dos.py  test_aiida_converters.py  test_aiida_diagnostics.py  test_aiida_e2e.py  test_aiida_migration.py  test_aiida_multicode.py  test_aiida_parser.py  test_aiida_protocols.py  test_aiida_query_adapter.py  test_aiida_submitter.py  test_app.py  test_auto_form.py  test_base_runner.py  test_batch_submission.py  test_codes_crystal.py  test_codes_qe_vasp.py  test_connection_manager.py  test_connection_manager_locking.py  test_core_adapter.py  test_core_integration.py  test_database.py  test_database_concurrency.py  test_database_migrations.py  test_database_remote.py  test_dependency_utils.py  test_environment.py  test_json_contract.py  test_local_runner.py  test_materials_api.py  test_orchestrator.py  test_qe_pseudopotential_manager.py  test_queue_manager.py  test_queue_manager_concurrency.py  test_queue_manager_n_plus_one.py  test_queue_manager_performance.py  test_results_summary.py  test_screens.py  test_slurm_runner.py  (+9 more)
(+508 files in other folders)
