[package]
name = "crystalmath-tui"
version = "0.2.0"
edition = "2021"
authors = ["Brian Squires"]
description = "High-performance TUI for CRYSTAL23 DFT calculations"
license = "MIT"
repository = "https://github.com/briansquires/crystalmath"
keywords = ["tui", "dft", "crystal23", "quantum-chemistry"]
categories = ["command-line-interface", "science"]

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Async Runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Python Integration
pyo3 = { version = "0.27", features = ["auto-initialize"] }

# Editor Widget
tui-textarea = "0.7"

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# URL handling for LSP URIs
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Platform directories (XDG on Linux, Library on macOS)
dirs = "5.0"
micromath = "2.1.0"
tachyonfx = "0.10.1"
unicode-truncate = "2.0"


[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "crystalmath"
path = "src/main.rs"
