[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crystalmath"
version = "0.2.0"
description = "Python scientific backend for CrystalMath Rust TUI"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brian Squires" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["dft", "crystal23", "quantum-chemistry", "aiida"]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
aiida = [
    "aiida-core>=2.0.0",
    "pymatgen>=2024.1.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "crystalmath[aiida,dev]",
]

[project.urls]
Homepage = "https://github.com/briansquires/crystalmath"
Documentation = "https://github.com/briansquires/crystalmath#readme"
Repository = "https://github.com/briansquires/crystalmath"

[tool.hatch.build.targets.wheel]
packages = ["crystalmath"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["aiida.*", "pymatgen.*"]
ignore_missing_imports = true
