[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crystalmath"
version = "0.2.0"
description = "Python scientific backend for CrystalMath Rust TUI"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Brian Squires" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = ["dft", "crystal23", "quantum-chemistry", "aiida"]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
aiida = [
    "aiida-core>=2.0.0",
    "pymatgen>=2024.1.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
llm = [
    "anthropic>=0.39.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
]
all = [
    "crystalmath[aiida,dev,llm]",
]

[project.urls]
Homepage = "https://github.com/briansquires/crystalmath"
Documentation = "https://github.com/briansquires/crystalmath#readme"
Repository = "https://github.com/briansquires/crystalmath"

[tool.hatch.build.targets.wheel]
packages = ["crystalmath"]

# Tool configuration is inherited from workspace root (../pyproject.toml)
# Local overrides can be added here if needed

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
